[gd_scene load_steps=14 format=3 uid="uid://b486dpbtpwx6o"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_okffg"]
[ext_resource type="Texture2D" uid="uid://jk4juh4pr4os" path="res://sprites/bg.png" id="2_r57gm"]
[ext_resource type="Texture2D" uid="uid://xygv2lxvgj42" path="res://AlxvUI/stop_hover.png" id="3_dy3pa"]
[ext_resource type="PackedScene" uid="uid://oumcphgr34" path="res://scenes/input.tscn" id="3_iviav"]
[ext_resource type="PackedScene" uid="uid://r4yv4t460vey" path="res://scenes/output.tscn" id="4_hp76t"]
[ext_resource type="Texture2D" uid="uid://ttwjbtipg45w" path="res://AlxvUI/step_hover.png" id="4_wh42g"]
[ext_resource type="PackedScene" uid="uid://unakjog6dqh4" path="res://scenes/description.tscn" id="5_orl6f"]
[ext_resource type="Texture2D" uid="uid://logx37fayexh" path="res://AlxvUI/play_hover.png" id="5_rny8g"]
[ext_resource type="Texture2D" uid="uid://bjvuyjduthgyx" path="res://AlxvUI/del_hover.png" id="6_1li23"]
[ext_resource type="Theme" uid="uid://uyhwbeyput42" path="res://font/input.tres" id="6_4j8cu"]
[ext_resource type="Theme" uid="uid://wp75bn4o32l1" path="res://font/act_out.tres" id="7_wjnek"]

[sub_resource type="Theme" id="Theme_hmbop"]
TextEdit/colors/background_color = Color(0, 0.6, 0, 0.2)

[sub_resource type="Theme" id="Theme_5u3fx"]
default_font_size = 24

[node name="Main" type="Node2D"]
script = ExtResource("1_okffg")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.376471)
position = Vector2(576.25, 324.5)
scale = Vector2(3.85117, 3.8869)
texture = ExtResource("2_r57gm")

[node name="GraphEdit" type="GraphEdit" parent="."]
offset_left = 160.0
offset_top = 14.0
offset_right = 982.0
offset_bottom = 643.0
scroll_offset = Vector2(-360.54, -176.1)
show_grid = false
snapping_enabled = false
right_disconnects = true
zoom = 0.54
minimap_enabled = false

[node name="Input" parent="GraphEdit" instance=ExtResource("3_iviav")]
layout_mode = 0
offset_left = 9.54001
offset_top = 240.9
offset_right = 186.54
offset_bottom = 491.9
scale = Vector2(0.54, 0.54)
mouse_filter = 1
position_offset = Vector2(-650, 120)

[node name="Output" parent="GraphEdit" instance=ExtResource("4_hp76t")]
layout_mode = 0
offset_left = 684.54
offset_top = 240.9
offset_right = 861.54
offset_bottom = 491.9
scale = Vector2(0.54, 0.54)
mouse_filter = 1
position_offset = Vector2(600, 120)

[node name="Description" parent="GraphEdit" instance=ExtResource("5_orl6f")]
layout_mode = 0
offset_left = 549.631
offset_top = 400.02
offset_right = 1039.63
offset_bottom = 455.02
scale = Vector2(0.54, 0.54)
mouse_filter = 1
position_offset = Vector2(350.168, 414.666)

[node name="Channels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Input" type="TextEdit" parent="Channels"]
layout_mode = 0
offset_left = 998.0
offset_top = 14.0
offset_right = 1043.0
offset_bottom = 214.0
theme = ExtResource("6_4j8cu")

[node name="Input2" type="TextEdit" parent="Channels"]
layout_mode = 0
offset_left = 998.0
offset_top = 214.0
offset_right = 1043.0
offset_bottom = 414.0
theme = ExtResource("6_4j8cu")

[node name="Input3" type="TextEdit" parent="Channels"]
layout_mode = 0
offset_left = 998.0
offset_top = 414.0
offset_right = 1043.0
offset_bottom = 614.0
theme = ExtResource("6_4j8cu")

[node name="ExpectedOutput" type="TextEdit" parent="Channels"]
layout_mode = 0
offset_left = 1048.0
offset_top = 14.0
offset_right = 1093.0
offset_bottom = 214.0
theme = SubResource("Theme_hmbop")

[node name="ExpectedOutput2" type="TextEdit" parent="Channels"]
layout_mode = 0
offset_left = 1048.0
offset_top = 214.0
offset_right = 1093.0
offset_bottom = 414.0
theme = SubResource("Theme_hmbop")

[node name="ExpectedOutput3" type="TextEdit" parent="Channels"]
layout_mode = 0
offset_left = 1048.0
offset_top = 414.0
offset_right = 1093.0
offset_bottom = 614.0
theme = SubResource("Theme_hmbop")

[node name="ActualOutput" type="TextEdit" parent="Channels"]
layout_mode = 0
offset_left = 1098.0
offset_top = 14.0
offset_right = 1143.0
offset_bottom = 214.0
theme = ExtResource("7_wjnek")

[node name="ActualOutput2" type="TextEdit" parent="Channels"]
layout_mode = 0
offset_left = 1098.0
offset_top = 214.0
offset_right = 1143.0
offset_bottom = 414.0
theme = ExtResource("7_wjnek")

[node name="ActualOutput3" type="TextEdit" parent="Channels"]
layout_mode = 0
offset_left = 1098.0
offset_top = 414.0
offset_right = 1143.0
offset_bottom = 614.0
theme = ExtResource("7_wjnek")

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Neuron" type="MenuButton" parent="Buttons"]
layout_mode = 0
offset_left = 80.0
offset_top = 128.0
offset_right = 147.0
offset_bottom = 161.0
text = "Neuron"
flat = false
item_count = 3
popup/item_0/text = "Adder"
popup/item_0/id = 0
popup/item_1/text = "Inhib1"
popup/item_1/id = 1
popup/item_2/text = "Inhib2"
popup/item_2/id = 2

[node name="Myelin" type="MenuButton" parent="Buttons"]
layout_mode = 0
offset_left = 11.0
offset_top = 128.0
offset_right = 77.0
offset_bottom = 161.0
text = "Myelin"
flat = false
item_count = 3
popup/item_0/text = "Negation"
popup/item_0/id = 0
popup/item_1/text = "Threshold"
popup/item_1/id = 1
popup/item_2/text = "Delay"
popup/item_2/id = 2

[node name="Constant" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 40.0
offset_top = 91.0
offset_right = 118.0
offset_bottom = 124.0
text = "Constant"

[node name="AdderNeuronButton" type="Button" parent="Buttons"]
visible = false
layout_mode = 0
offset_right = 114.0
offset_bottom = 56.0
text = "AdderNeuron"

[node name="InhibitoryNeuronButton" type="Button" parent="Buttons"]
visible = false
layout_mode = 0
offset_left = 130.0
offset_right = 238.0
offset_bottom = 56.0
text = "Inhibitory-1"

[node name="InhibitoryNeuronButton2" type="Button" parent="Buttons"]
visible = false
layout_mode = 0
offset_left = 252.0
offset_right = 360.0
offset_bottom = 56.0
text = "Inhibitory-2"

[node name="NegationButton" type="Button" parent="Buttons"]
visible = false
layout_mode = 0
offset_left = 1.0
offset_top = 64.0
offset_right = 112.0
offset_bottom = 112.0
text = "Negation"

[node name="ThresholdButton" type="Button" parent="Buttons"]
visible = false
layout_mode = 0
offset_left = 130.0
offset_top = 64.0
offset_right = 238.0
offset_bottom = 112.0
text = "Threshold"

[node name="DelayButton" type="Button" parent="Buttons"]
visible = false
layout_mode = 0
offset_left = 248.0
offset_top = 64.0
offset_right = 328.0
offset_bottom = 112.0
text = "Delay"

[node name="InputButton" type="Button" parent="Buttons"]
visible = false
layout_mode = 0
offset_left = 11.0
offset_top = 90.0
offset_right = 77.0
offset_bottom = 123.0
text = "Input"

[node name="OutputButton" type="Button" parent="Buttons"]
visible = false
layout_mode = 0
offset_left = 80.0
offset_top = 90.0
offset_right = 146.0
offset_bottom = 123.0
text = "Output"

[node name="ChooseLevel" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 4.0
offset_top = 14.0
offset_right = 158.0
offset_bottom = 68.0
text = "LoadFromTXT"

[node name="ResetALL" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = -2.0
offset_top = 599.0
offset_right = 83.0
offset_bottom = 644.0
icon = ExtResource("3_dy3pa")
flat = true
expand_icon = true

[node name="Step" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 77.0
offset_top = 559.0
offset_right = 162.0
offset_bottom = 604.0
theme = SubResource("Theme_5u3fx")
icon = ExtResource("4_wh42g")
flat = true
expand_icon = true

[node name="Run" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = -2.0
offset_top = 559.0
offset_right = 83.0
offset_bottom = 604.0
theme = SubResource("Theme_5u3fx")
icon = ExtResource("5_rny8g")
flat = true
expand_icon = true

[node name="Reload" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 77.0
offset_top = 599.0
offset_right = 162.0
offset_bottom = 643.0
theme = SubResource("Theme_5u3fx")
icon = ExtResource("6_1li23")
flat = true

[node name="ChangeVMode" type="Button" parent="Buttons"]
visible = false
layout_mode = 0
offset_left = 648.0
offset_top = 176.0
offset_right = 768.0
offset_bottom = 224.0
theme = SubResource("Theme_5u3fx")
theme_override_font_sizes/font_size = 16
toggle_mode = true
text = "ChangeVMode"
flat = true

[node name="temptext" type="TextEdit" parent="."]
visible = false
offset_left = 481.0
offset_top = 280.0
offset_right = 530.0
offset_bottom = 438.0

[node name="Description" type="TextEdit" parent="."]
visible = false
offset_left = 11.0
offset_top = 166.0
offset_right = 155.0
offset_bottom = 420.0
wrap_mode = 1

[node name="StepCounter" type="Label" parent="."]
offset_left = 14.0
offset_top = 183.0
offset_right = 99.0
offset_bottom = 221.0
theme_override_font_sizes/font_size = 21
text = "Step:"

[node name="Cost" type="Label" parent="."]
visible = false
offset_left = 7.0
offset_top = 519.0
offset_right = 115.0
offset_bottom = 567.0
theme_override_font_sizes/font_size = 31
text = "Cost:0"

[node name="Test" type="Label" parent="."]
visible = false
offset_left = 10.0
offset_top = 444.0
offset_right = 170.0
offset_bottom = 508.0
theme_override_font_sizes/font_size = 31
text = "Case: 1/1"

[node name="SelectTest" type="SpinBox" parent="."]
visible = false
offset_left = 1048.0
offset_top = 84.0
offset_right = 1131.06
offset_bottom = 120.0
min_value = 1.0
max_value = 1.0
value = 1.0
prefix = "Test"

[node name="FileDialog" type="FileDialog" parent="."]
title = "choose a level"
initial_position = 1
size = Vector2i(437, 334)
ok_button_text = "打开"
dialog_hide_on_ok = true
mode_overrides_title = false
file_mode = 0
access = 2
filters = PackedStringArray("*.txt")
use_native_dialog = true

[node name="VSensitive" type="CheckButton" parent="."]
offset_left = 19.0
offset_top = 426.0
offset_right = 151.0
offset_bottom = 457.0
focus_mode = 0
button_pressed = true
text = "V Sensitive"

[node name="AutoPause" type="CheckButton" parent="."]
offset_left = 19.0
offset_top = 452.0
offset_right = 151.0
offset_bottom = 483.0
focus_mode = 0
button_pressed = true
text = "AutoPause"

[node name="VMode" type="CheckButton" parent="."]
visible = false
offset_left = 552.0
offset_top = 92.0
offset_right = 684.0
offset_bottom = 128.0
focus_mode = 0
button_pressed = true
text = "Show V"

[node name="TestControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="PrevTest" type="Button" parent="TestControl"]
layout_mode = 0
offset_left = 24.0
offset_top = 486.0
offset_right = 51.0
offset_bottom = 523.0
focus_mode = 0
text = "<"

[node name="TestNumber" type="Label" parent="TestControl"]
layout_mode = 0
offset_left = 51.0
offset_top = 483.0
offset_right = 111.0
offset_bottom = 527.0
text = "Case 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextTest" type="Button" parent="TestControl"]
layout_mode = 1
anchors_preset = -1
offset_left = 119.0
offset_top = 486.0
offset_right = 143.0
offset_bottom = 523.0
focus_mode = 0
text = ">"

[node name="Timer" type="Timer" parent="."]

[node name="HSlider" type="HSlider" parent="."]
offset_left = 149.0
offset_top = 555.0
offset_right = 292.0
offset_bottom = 571.0
rotation = -3.14159
min_value = 0.05
max_value = 1.0
step = 0.05
value = 1.0
exp_edit = true
tick_count = 3
ticks_on_borders = true

[connection signal="connection_request" from="GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="pressed" from="Buttons/Constant" to="." method="createConstant"]
[connection signal="pressed" from="Buttons/AdderNeuronButton" to="." method="createAdderNeuron"]
[connection signal="pressed" from="Buttons/InhibitoryNeuronButton" to="." method="createInhibitoryNeuron"]
[connection signal="pressed" from="Buttons/InhibitoryNeuronButton2" to="." method="createInhibitoryNeuron2"]
[connection signal="pressed" from="Buttons/NegationButton" to="." method="createNegation"]
[connection signal="pressed" from="Buttons/ThresholdButton" to="." method="createThreshold"]
[connection signal="pressed" from="Buttons/DelayButton" to="." method="createDelay"]
[connection signal="pressed" from="Buttons/InputButton" to="." method="createInput"]
[connection signal="pressed" from="Buttons/OutputButton" to="." method="createOutput"]
[connection signal="pressed" from="Buttons/ChooseLevel" to="." method="_on_choose_level_pressed"]
[connection signal="pressed" from="Buttons/ResetALL" to="." method="ResetAll"]
[connection signal="pressed" from="Buttons/Step" to="." method="Step"]
[connection signal="pressed" from="Buttons/Run" to="." method="_toggle_auto_run"]
[connection signal="pressed" from="Buttons/Reload" to="." method="Reload"]
[connection signal="pressed" from="Buttons/ChangeVMode" to="." method="_on_change_v_mode_pressed"]
[connection signal="value_changed" from="SelectTest" to="." method="_on_select_test_value_changed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="pressed" from="VSensitive" to="." method="_change_v_sensitive"]
[connection signal="pressed" from="AutoPause" to="." method="_toggle_auto_pause"]
[connection signal="pressed" from="TestControl/PrevTest" to="." method="prev_test"]
[connection signal="pressed" from="TestControl/NextTest" to="." method="next_test"]
[connection signal="timeout" from="Timer" to="." method="Step"]
[connection signal="value_changed" from="HSlider" to="." method="_on_timer_changed"]
